<resources>
    <string name="app_name">Parift Ride</string>
    <string name="product_name">Parift Ride</string>
    <string name="company_tag_line">Solving Problems</string>
    <string name="GOOGLE_API_KEY">AIzaSyBMt01RFeR2x-yCuvGQsenl892ifd8fPxw</string>
    <string name="google_signin_client_id">400812239675-n2312q12vnv0hnmalr4i37iqmpa8tuga.apps.googleusercontent.com</string>
    <string name="sign_up">Join</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="title_activity_mobile_registration">MobileRegistrationActivity</string>
    <string name="mobile_registration_heading">Mobile Registration</string>
    <string name="mobile_registration_sub_heading">Please enter your mobile number.</string>
    <string name="send_verification_code">Send Code</string>
    <string name="default_country_code">+91</string>
    <string name="verification_code_message">"Please type the verification code sent to "</string>
    <string name="verification_code_heading">Verification Code</string>
    <string name="otp_confirm_button_text">Confirm</string>
    <string name="did_not_received_otp_code_label">Didn\'t received code?</string>
    <string name="resend_otp_code_message">Call Me</string>
    <string name="invalid_mobile_number">Please enter 10 digit mobile number</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="request_ride_button_text">Request Ride</string>
    <string name="offer_ride_button_text">Offer Ride</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="from_address_label">From</string>
    <string name="to_address_label">To</string>
    <string name="current_location_text">Current Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_number_label">Registration Number</string>
    <string name="model_label">Make and Model</string>
    <string name="category_label">Category</string>
    <string name="sub_category_label">Sub Category</string>
    <string name="number_of_seats_label">Seat</string>
    <string name="small_luggage_label">Small Luggage</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_button_text">Add</string>
    <string name="vehicle_category_label">Vehicle Category</string>
    <string name="vehicle_number_label">Vehicle Number</string>
    <string name="vehicle_sub_category_label">Vehicle Sub Category</string>
    <string name="save_button_text">Save</string>
    <string name="option_button_text">Option</string>
    <string name="drop_distance_variation">Max Drop Distance (mts)</string>
    <string name="pickup_distance_variation">Max Pickup Distance (mts)</string>
    <string name="pickup_time_variation">Pickup Time Flexibility (+/- min)</string>
    <string name="from_adress_hint">From</string>
    <string name="to_address_hint">To</string>
    <string name="ride_offer_id_text">"Ride Offer"</string>
    <string name="transaction_id_text">"Ref #"</string>
    <string name="ride_request_id_text">"Ride Request"</string>
    <string name="ride_request_payment_code_text">"Payment Code "</string>
    <string name="distance_metrics">" mtrs"</string>
    <string name="drop_text_msg">"Drop "</string>
    <string name="cancel_cotraveller_text">"Reject "</string>
    <string name="rate_cotraveller_text">"Rate "</string>
    <string name="system_exception_msg">Technical Issue. Please try again</string>
    <string name="standard_cancellation_confirmation_message">Are you sure you want to cancel?</string>
    <string name="recurring_cancellation_confirmation_message">Do you want to cancel current ride or all upcoming rides?</string>
    <string name="ride_end_confirmation_message">Are you sure you want to end the ride early?</string>
    <string name="bill_no_text">Bill</string>
    <string name="rides_offered_text">"Rides Offered - "</string>
    <string name="rides_requested_text">"Rides Requested - "</string>
    <string name="mutual_friends_text">"Mutual Friends - "</string>
    <string name="common_groups_text">"Common Groups - "</string>
    <string name="no_common_groups_text">No Common Groups</string>
    <string name="my_groups_text">"My Groups - "</string>
    <string name="add_vehicle_thumbnail_text">Add Vehicle</string>
    <string name="pending_bills_ride_owner_amount_label">Payable to Ride Owner</string>
    <string name="paid_bills_ride_owner_amount_label">Paid to Ride Owner</string>
    <string name="amount_hint">Amount</string>
    <string name="min_amount_hint">Min Amount</string>
    <string name="selection_all">All</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="required_wallet_balance_label">"Required Balance for all unpaid rides "</string>
    <string name="fare_text">"Fare "</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Ride Notifications</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="form_purpose_label">Purpose</string>
    <string name="form_purpose_explaination">Helps you to verify the identity of the person requesting membership to this group</string>
    <string name="form_how_label">How</string>
    <string name="form_how_explaination">Ask the right questions to identify genuine users</string>
    <string name="membership_form_help_content">You can frame your own question for e.g.
        \n\n1. What\'s your official email id <i>(office groups)</i>
        \n2. What\'s your flat number <i>(apartment groups)</i>
        \n3. What\'s your college name <i>(friend groups)</i>
        \n\n<b>Note</b> - Membership request comes with user name and number by default</string>
    <string name="price">Price</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="website">Website</string>
    <string name="app_version">"App Version "</string>
    <string name="no_group_membership_msg">Please join groups to find trusted ride partner</string>
    <string name="agreement_text">By Signing in, you agree to our Terms of Service and Privacy Policy</string>
    <string name="no_ride_partner_found_msg">No Ride Partner found, will notify you when suitable match is found</string>
    <string name="interest_heading_msg">Select your interest to meet like-minded ride partners</string>
    <string name="no_result_found">No result found</string>
    <string name="rides_suggestion_msg">No perfect match found. If you are flexible, Please check out other options</string>
    <string name="contact_us">Contact us</string>
    <string name="feedback_concern">(Feedback / Concern)</string>
    <string name="redemption_msg">Money would be credited to your <b>Paytm</b> account in couple of days.
        In case you don\'t have Paytm account, please create one. For any issue, please contact us.</string>
    <string name="platform_limited_to_car_owners_msg">We offer Ride Sharing between car owner\'s only, so please add your vehicle</string>

</resources>
