<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.parift.rideshare.fragment.InfoFragment">

    <TextView
        android:id="@+id/website"
        android:padding="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading3_text_size"
        android:textColor="@android:color/black"
        android:text="@string/website"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_seperator_thickness"
        android:background="@color/colorGrayLight"/>

    <TextView
        android:id="@+id/terms_of_service"
        android:padding="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading3_text_size"
        android:textColor="@android:color/black"
        android:text="@string/terms_of_service"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_seperator_thickness"
        android:background="@color/colorGrayLight"/>

    <TextView
        android:id="@+id/privacy_policy"
        android:padding="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading3_text_size"
        android:textColor="@android:color/black"
        android:text="@string/privacy_policy"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_seperator_thickness"
        android:background="@color/colorGrayLight"/>

    <TextView
        android:id="@+id/app_version"
        android:padding="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"/>


</LinearLayout>
