<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitusrevolution.rideshare.activity.MobileRegistrationActivity">

    <TextView
        android:id="@+id/verify_mobile_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_block_height"
        android:background="@color/colorPrimary"
        android:gravity="bottom|center_horizontal"
        android:text="@string/mobile_registration_heading"
        android:textColor="@android:color/white"
        android:textSize="@dimen/heading2_text_size"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/profile_photo_small_diameter"
        android:layout_height="@dimen/profile_photo_small_diameter"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/default_margin"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/verify_mobile_sub_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_block_height"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/mobile_registration_sub_heading"
        android:textColor="@android:color/white"
        android:textSize="@dimen/heading3_text_size"
        android:paddingTop="@dimen/default_padding"
        android:layout_below="@id/verify_mobile_heading"
        android:labelFor="@id/mobile_number"/>

    <Spinner
        android:id="@+id/country_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_mobile_sub_heading"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"/>

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:inputType="number"
        android:layout_below="@id/country_name_spinner"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/send_otp_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@color/colorPrimary"
        android:text="@string/send_verification_code"
        android:textAllCaps="false"
        android:textStyle="bold"/>

</RelativeLayout>
