<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digitusrevolution.rideshare.fragment.AddVehicleFragment">

    <LinearLayout android:id="@+id/add_vehicle_number_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/add_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_number_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <EditText android:id="@+id/add_vehicle_number_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textNoSuggestions"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_model_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:layout_below="@id/add_vehicle_number_layout"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/add_registration_model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <EditText android:id="@+id/add_vehicle_model_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textNoSuggestions"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_category_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:layout_below="@id/add_vehicle_model_layout">

        <TextView
            android:id="@+id/add_vehicle_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <Spinner android:id="@+id/add_vehicle_category_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewEnd"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_sub_category_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:layout_below="@id/add_vehicle_category_layout">

        <TextView
            android:id="@+id/add_vehicle_sub_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_category_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <Spinner android:id="@+id/add_vehicle_sub_category_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewEnd"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_seat_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:layout_below="@id/add_vehicle_sub_category_layout">

        <TextView
            android:id="@+id/add_vehicle_seat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_seats_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <LinearLayout android:id="@+id/add_vehicle_seat_inner_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="end"
                      android:layout_marginEnd="@dimen/default_margin">

            <ImageButton android:id="@+id/add_vehicle_seat_minus_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_minus_circle"
                         android:background="@android:color/transparent"
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/default_margin"/>

            <TextView android:id="@+id/add_vehicle_seat_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
                      android:background="@drawable/border"
                      android:textAlignment="center"
                      android:padding="@dimen/default_padding"/>

            <ImageButton android:id="@+id/add_vehicle_seat_plus_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_add_circle"
                         android:background="@android:color/transparent"
                         android:layout_gravity="center"
                         android:layout_marginStart="@dimen/default_margin"/>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_luggage_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/default_padding"
                  android:layout_below="@id/add_vehicle_seat_layout">

        <TextView
            android:id="@+id/add_vehicle_luggage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_suitcase_capacity_label"
            android:textSize="@dimen/standard_label_text_size"
            android:padding="@dimen/default_padding"/>

        <LinearLayout android:id="@+id/add_vehicle_luggage_inner_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="end"
                      android:layout_marginEnd="@dimen/default_margin">

            <ImageButton android:id="@+id/add_vehicle_luggage_minus_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_minus_circle"
                         android:background="@android:color/transparent"
                         android:layout_marginEnd="@dimen/default_margin"
                         android:layout_gravity="center"/>

            <TextView android:id="@+id/add_vehicle_luggage_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
                      android:background="@drawable/border"
                      android:textAlignment="center"
                      android:padding="@dimen/default_padding"/>

            <ImageButton android:id="@+id/add_vehicle_luggage_plus_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_add_circle"
                         android:background="@android:color/transparent"
                         android:layout_marginStart="@dimen/default_margin"
                         android:layout_gravity="center"/>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout android:id="@+id/add_vehicle_buttons_layout"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/default_padding"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_vehicle_cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel_button_text"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/add_vehicle_add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add_button_text"
            android:textAllCaps="false"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>