<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digitusrevolution.rideshare.fragment.PreferenceFragment"
    android:orientation="vertical">

    <include layout="@layout/seat_luggage_layout"/>

    <LinearLayout android:id="@+id/preference_ride_request_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/preference_pickup_time_variation_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="@dimen/default_padding"
                      android:layout_marginTop="@dimen/default_margin">

            <TextView android:id="@+id/preference_pickup_time_variation_label"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Pickup Time Variation"/>

            <SeekBar android:id="@+id/preference_pickup_time_variation_seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:min="10"
                     android:max="30"
                     android:padding="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/preference_pickup_distance_variation_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="@dimen/default_padding">

            <TextView android:id="@+id/preference_pickup_distance_variation_label"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Pickup Distance Variation"/>

            <SeekBar android:id="@+id/preference_pickup_distance_variation_seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:min="10"
                     android:max="30"
                     android:padding="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/preference_drop_time_variation_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="@dimen/default_padding">

            <TextView android:id="@+id/preference_drop_time_variation_label"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Pickup Distance Variation"/>

            <SeekBar android:id="@+id/preference_drop_time_variation_seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:min="10"
                     android:max="30"
                     android:padding="@dimen/default_padding"/>

        </LinearLayout>

        <include layout="@layout/vehicle_category_layout"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/preference_ride_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="?android:colorBackground">

        <LinearLayout android:id="@+id/preference_vehicle_name_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="@dimen/default_padding"
                      android:gravity="center"
                      android:layout_marginBottom="@dimen/default_margin">

            <TextView
                android:id="@+id/preference_vehicle_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_number_label"
                android:textSize="@dimen/standard_label_text_size"/>

            <Spinner android:id="@+id/preference_vehicle_name_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="viewEnd"/>
        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/trust_category_layout"/>

    <LinearLayout android:id="@+id/preference_buttons_layout"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:padding="@dimen/default_padding"
                  android:gravity="bottom">

        <Button
            android:id="@+id/preference_cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel_button_text"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/preference_confirm_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/confirm_button_text"
            android:textAllCaps="false"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
